--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/vue-router": "^2.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.89.2",
