--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
+    "start": "",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
@@ -15,6 +16,7 @@
   "dependencies": {
     "firebase": "^12.0.0",
     "js-cookie": "^3.0.5",
+    "serve": "^14.2.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
